--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -20,6 +20,8 @@ jobs:
           cache: 'maven'
       - name: OWASP Dependency-Check
         uses: dependency-check/Dependency-Check_Action@main
+        env:
+          JAVA_HOME: /opt/jdk
         with:
           project: 'IS-1'
           path: '.'
