--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -24,3 +24,11 @@ jobs:
         uses: jwgmeligmeyling/spotbugs-github-action@v1
         with:
           path: '**/spotbugsXml.xml'
+      - name: Upload SpotBugs report
+        uses: actions/upload-artifact@v4
+        with:
+          name: spotbugs-report
+          path: |
+            **/target/spotbugs.html
+            **/target/spotbugsXml.xml
+          retention-days: 30
