--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -26,10 +26,10 @@ jobs:
           project: 'IS-1'
           path: '.'
           format: 'HTML'
-      - name: Upload Dependency-Check reports
+      - name: Upload HTML report
         uses: actions/upload-artifact@v4
+        if: always()
         with:
-          name: dependency-check-reports
-          path: |
-            dependency-check-report/
+          name: dependency-check-html-report
+          path: /github/workspace/reports/dependency-check-report.html
           retention-days: 30
