--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -22,6 +22,9 @@ jobs:
         run: mvn install
       - name: Run OWASP Dependency Check
         uses: dependency-check/Dependency-Check_Action@main
+        env:
+          # actions/setup-java@v1 changes JAVA_HOME so it needs to be reset to match the depcheck image
+          JAVA_HOME: /opt/jdk
         with:
           project: 'test'
           path: '.'
