--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -18,14 +18,15 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
           cache: 'maven'
-      - name: Build with maven
-        run: mvn clean install
-      - name: Run SpotBugs
-        run: | 
-          mvn spotbugs:spotbugs
-          mvn spotbugs:gui
-      - name: Publish SpotBugs report
-        uses: jwgmeligmeyling/spotbugs-github-action@v1
+      - uses: actions/cache@v1
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+      - name: Build with Maven
+        run: mvn -B verify spotbugs:spotbugs
+      - uses: jwgmeligmeyling/spotbugs-github-action@master
         with:
           path: '**/spotbugsXml.xml'
       - name: Upload SpotBugs reports
