--- a/.github/workflows/sast-and-sca.yml
+++ b/.github/workflows/sast-and-sca.yml
@@ -1,4 +1,4 @@
-name: Software Composition Analysis
+name: Static Application Security Testing and Software Composition Analysis
 
 on:
   push:
@@ -7,7 +7,32 @@ on:
     branches: [master]
 
 jobs:
-  build:
+  SAST:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: 'maven'
+      - name: Build with maven and run SpotBugs
+        run: mvn clean install spotbugs:spotbugs
+      - name: Publish SpotBugs report
+        uses: jwgmeligmeyling/spotbugs-github-action@v1
+        with:
+          path: '**/spotbugsXml.xml'
+      - name: Upload SpotBugs report
+        uses: actions/upload-artifact@v4
+        with:
+          name: Spotbugs report
+          path: |
+            **/target/spotbugs.html
+            **/target/spotbugsXml.xml
+          retention-days: 30
+  SCA:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -34,6 +59,6 @@ jobs:
       - name: Upload Test results
         uses: actions/upload-artifact@master
         with:
-          name: Depcheck report v${{ matrix.node-version }}
+          name: Depcheck report
           path: ${{github.workspace}}/reports
           overwrite: true
