--- a/.github/workflows/sast-and-sca.yml
+++ b/.github/workflows/sast-and-sca.yml
@@ -56,7 +56,7 @@ jobs:
           format: 'HTML'
           out: 'reports'
           args: >
-            --suppression ${{github.workspace}}/dependency-check-suppress.xml
+            --suppression dependency-check-suppress.xml
 
       - name: Upload Test results
         uses: actions/upload-artifact@master
